Avatar - - fix z-index issue

--- a/packages/ui/src/8-grids/_grid-with-side.scss
+++ b/packages/ui/src/8-grids/_grid-with-side.scss
@@ -34,7 +34,7 @@
   }
 }
 
-.main-content { z-index:1; }
+.main-content { position:relative; z-index:1; }
 
 .main-header {
   position:sticky;
